# StupidFS

./: .gitignore  Doxyfile  LICENSE.BSD3  Makefile.am  Makefile.kernel  README.md  README.org  compile_flags.txt  configure.ac
.github/workflows/: doc.yml
docs/book/: main.tex
fuse/: Makefile.am  main.c
include/: stupidfs.h
lib/: Makefile.am  block.c  data.c  dir.c  inode.c  stpdfs.h  superblock.c
lib/codec/: base64.c
lib/compression/: lzp.c  lzp.h
lib/crypto/: chacha.h  hchacha.c  xchacha.c
libcrypto/: Makefile.am  chacha.h  hchacha.c  random.c  random.h
libcrypto/tests/: Makefile.am  test_hchacha.c  test_random.c  test_xchacha.c
libfs/: Makefile.am  balloc.c  dir.c  dir.h  file.h  fs.h  inode.c  inode.h  offset.c  rw.c  super.c  super.h
libfs/bio/: bio.c  bio.h  raw.c
libfs/tests/: Makefile.am  test_offset.c
liblzp/: Makefile.am  lzp.c  lzp.h
liblzp/tests/: Makefile.am
libstpdfs/: Makefile.am  bio.c  file.c  inode.c  stpdfs.h  super.c
linux/: Makefile.am  Makefile.automake  module.c  module.h  super.c
mkfs/: main.c
module/: Makefile.am  module.c  module_stpdfs.c
src/: Makefile.am  main.c
tests/: Makefile.am  test_base64.c  test_hchacha.c  test_lzp.c  test_xchacha.c
tools/: Makefile.am
tools/inspect/: main.c
tools/mkfs/: boot.asm  main.c  mkfs.stpd.8
tools/tests/: Makefile.am  mkfs.test  tools.test
tools/tools/: copy.c  ls.c  main.c  mkdir.c  rm.c  tools.h
tools/tools/ls/: colors.c  colors.h
win32/: StupidFS.inf  StupidFS.sln  StupidFS.vcxproj  StupidFS.vcxproj.filters  create.c  driver.c
