AC_INIT([StupidFS], [0.0])

AM_INIT_AUTOMAKE([foreign subdir-objects])

AC_CONFIG_MACRO_DIRS([m4])

AC_LANG(C)
AC_PROG_CC
AC_PROG_CPP
AM_PROG_AR
AC_PROG_INSTALL
AM_PROG_CC_C_O

PKG_CHECK_MODULES([FUSE], [fuse3])

AC_CHECK_INCLUDES_DEFAULT
AC_C_CONST
AC_C_INLINE

AC_CONFIG_FILES([Makefile
				lib/Makefile
				module/Makefile
				src/Makefile])

AC_OUTPUT